[package]
name = "cowl-swap"
version = "1.0.0"
edition = "2021"
authors = ["Thamps <thamps@cowl.network>"]

[[bin]]
name = "cowl-swap"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "3.0.0"
casper-types = "3.0.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"
strip = true

[features]
default = []