[package]
name = "cowl-vesting"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "4.0.0", optional = true, features = [
  "test-support",
] }
casper-types = "4.0.2"
casper-event-standard = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
time = { version = "0.3.36", default-features = false, features = ["alloc"] }

[[bin]]
name = "cowl_vesting"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]
